# mgfx

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  bitbucket-pipelines.yml  config_all.bat  config_minimal.bat  update_sub.bat
assets/models/sponza/textures/: vase_round_normal.dds
assets/shaders/DX12/: MeshPS.mhlsl  MeshRS.hlsli  MeshVS.mhlsl  QuadPS.mhlsl  QuadVS.mhlsl
assets/shaders/GL/: StandardShading.fragmentshader  StandardShading.vertexshader
assets/textures/: shooter_sprites.json
cmake/: msvc.cmake
m3rdparty/: list.cmake  m3rdparty.h
m3rdparty/easylogging/src/: easylogging++.cc
m3rdparty/gli/: .travis.yml  CMakeLists.txt
m3rdparty/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_dock.inl  imgui_orient.cpp  imgui_orient.h  imgui_scintilla.cpp
m3rdparty/scintilla/include/: Platform.h
m3rdparty/scintilla/src/: Editor.cxx
massetbuilder/: list.cmake
massetbuilder/app/: assetbuilder.cpp  assetbuilder.h  dxcompiler.cpp  dxcompiler.h  main.cpp  massetbuilder_app.h  massetbuilder_settings.cpp  massetbuilder_settings.h  massetbuilder_settings.test.cpp
mcommon/: list.cmake  mcommon.cpp  mcommon.h
mcommon/animation/: timer.cpp  timer.h
mcommon/file/: fileutils.cpp  fileutils.h  media_manager.cpp  media_manager.h  mfilesystem.h
mcommon/graphics/: primitives2d.cpp  primitives2d.h
mcommon/math/: mathutils.cpp  mathutils.h  mathutils.test.cpp  rectstack.h
mcommon/schema/: build_schema.bat  common.fbs  common_generated.h  material.fbs  material_generated.h  model.fbs  model_generated.h
mcommon/string/: hashstring.cpp  hashstring.h  murmur_hash.cpp  murmur_hash.h  stringutils.cpp  stringutils.h
mcommon/ui/: rectstack.h  ui_manager.cpp  ui_manager.h
mgeo/: list.cmake
mgeo/app/: load_assimp.cpp  load_assimp.h  load_assimp.test.cpp  main.cpp  mgeo_app.h  mgeo_settings.cpp  mgeo_settings.h  mgeo_settings.test.cpp
mgeo/m3rdparty/assimp/code/: ColladaExporter.cpp  ColladaLoader.cpp  IFCProfile.cpp  MMDImporter.cpp  ObjFileMtlImporter.cpp  Version.cpp  glTFExporter.cpp
mgeo/m3rdparty/assimp/include/assimp/: types.h
mgeo/m3rdparty/assimp/port/PyAssimp/pyassimp/: helper.py
mgfx/: list.cmake
mgfx/app/: Asteroids.cpp  Asteroids.h  GameOfLife.cpp  GameOfLife.h  GeometryTest.cpp  GeometryTest.h  Mazes.cpp  Mazes.h  MgfxRender.cpp  MgfxRender.h  RayTracer.cpp  RayTracer.h  Sponza.cpp  Sponza.h  main.cpp  mgfx.exe.manifest  mgfx_app.h  mgfx_settings.cpp  mgfx_settings.h  mgfx_settings.test.cpp
mgfx_core/: list.cmake  mgfx_core.h
mgfx_core/graphics2d/ui/: imgui_sdl_common.cpp  imgui_sdl_common.h  window.cpp  window.h  windowmanager.cpp  windowmanager.h
mgfx_core/graphics3d/camera/: camera.cpp  camera.h
mgfx_core/graphics3d/device/: IDevice.h
mgfx_core/graphics3d/device/DX12/: bufferDX12.cpp  bufferDX12.h  deviceDX12.cpp  deviceDX12.h  geometryDX12.cpp  geometryDX12.h  imguisdl_dx12.cpp  imguisdl_dx12.h  info.md  meshDX12.cpp  meshDX12.h  miniengine.h  shaderDX12.cpp
mgfx_core/graphics3d/device/DX12/miniengine/: BufferManager.cpp  BufferManager.h  ColorBuffer.cpp  CommandContext.h  DynamicDescriptorHeap.h  DynamicUploadBuffer.h  EngineProfiling.cpp  FileUtility.cpp  FileUtility.h  GraphicsCore.cpp  GraphicsCore.h  TextureManager.cpp  TextureManager.h  Utility.cpp  pch.h
mgfx_core/graphics3d/device/DX12/miniengine/CompiledShaders/: BufferCopyPS.h  PresentSDRPS.h  ScreenQuadVS.h
mgfx_core/graphics3d/device/GL/: bufferGL.cpp  deviceGL.cpp  deviceGL.h  geometryGL.cpp  geometryGL.h  imguisdl_gl3.cpp  imguisdl_gl3.h  quadGL.cpp  shader.cpp  shader.h
mgfx_core/graphics3d/device/Null/: deviceNull.cpp  deviceNull.h
mgfx_core/graphics3d/geometry/: mesh.cpp  mesh.h
mgfx_core/graphics3d/scene/: scene.cpp  scene.h  scene.test.cpp
mgfx_core/graphics3d/ui/: camera_manipulator.cpp  camera_manipulator.h
tests/: main.cpp
